--- a/src/main/webapp/scss/style.scss
+++ b/src/main/webapp/scss/style.scss
@@ -1,312 +1,1 @@
-@import "./defaults";
-@import "./variables";
-@import "./mixins";
-
-// Navbar section
-.Navbar__ {
-  @include heightWidth(3em, 100vw);
-  color: white;
-  padding: 2rem 6rem;
-  user-select: none;
-
-  .Navbar__container {
-    @include flexbox(flex, row, flex-start, center, 0);
-    height: 100%;
-
-    .Navbar__header {
-      @include heightWidth(auto, 25%);
-      display: flex;
-      flex-shrink: 1;
-
-      .Navbar__brand {
-        @include flexbox(flex, row, flex-start, center, 0);
-        @include heightWidth(auto, 8em);
-        font-size: 20px;
-        font-weight: normal;
-        margin-left: 1em;
-
-        &:hover {
-          color: white;
-          filter: drop-shadow(0 0 0.5em white);
-        }
-
-        svg {
-          @include flexbox(flex, row, flex-start, center, 0);
-          @include heightWidth(1em, 1em);
-          margin-right: 0.5em;
-        }
-      }
-    }
-
-    .Navbar__container-links {
-      @include flexbox(flex, row, flex-start, 0, 0);
-      @include heightWidth(100%, 100%);
-
-      ul {
-        @include flexbox(flex, row, flex-start, center, 0);
-        width: 100%;
-        list-style: none;
-
-        li {
-          @include flexbox(flex, row, flex-start, center, 0);
-          width: 20%;
-        }
-      }
-    }
-  }
-
-  .Navbar__right {
-    @include flexbox(flex, row, flex-end, center, 0);
-    width: 100%;
-    list-style: none;
-    margin: 0 1em 0 0;
-
-    .Navbar__right-link {
-      width: 4em;
-      background: inherit;
-      border: 1px solid white;
-      border-radius: 4px;
-      padding: 0.25em 0.5em;
-
-      &:hover {
-        box-shadow: 0 0 0.5em white;
-      }
-
-      &:active {
-        @include btnActive;
-      }
-    }
-
-    li {
-      padding: 0.5em;
-
-      a:not(.Navbar__profile-icon) {
-        &:hover {
-          background: white;
-          color: black;
-        }
-      }
-
-      .Navbar__profile-icon {
-        @include flexbox(flex, row, center, center, 0);
-
-        svg {
-          @include heightWidth(1.75em, 1.75em);
-        }
-      }
-    }
-  }
-}
-
-.form-control {
-  color: rgba(255 255 255 / 0.75);
-  background: #031b34;
-
-  &:hover {
-    box-shadow: 0 0 0.5em white;
-  }
-
-  &:focus,
-  &:active {
-    color: white;
-    background: #031b34;
-    box-shadow: 0 0 0.75em white;
-  }
-}
-
-.container {
-  .all-the-ads {
-    text-align: center;
-  }
-
-  .h1-welcome,
-  .h1-welcome-user {
-    width: 100%;
-  }
-
-  .here-are-your-ads {
-    width: 50%;
-  }
-
-  .container-all-ads {
-    text-align: center;
-  }
-
-  .edit-profile-h1 {
-    width: 100%;
-    margin-top: 2em;
-  }
-
-  h1 {
-    width: 40%;
-    font-size: 3em;
-    font-weight: 900;
-    background: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%) no-repeat;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: drop-shadow(0.125em 0.125em 0.125em black);
-    margin: 1em 0 0 0;
-  }
-
-  label {
-    background: #81afdd no-repeat center;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: drop-shadow(0 0 0.25em rgba(0 0 0 / 0.5));
-    font-size: 2em;
-    font-weight: 900;
-  }
-
-  .form-group:last-of-type {
-    margin-bottom: 2em;
-  }
-
-  .hr {
-    @include heightWidth(3px, 100%);
-    background: linear-gradient(103.22deg, #ae67fa -13.86%, #f49867 99.55%);
-    filter: drop-shadow(0.5em 0.5em 0.5em black);
-    border-radius: 1em;
-    margin-bottom: 0.25rem;
-  }
-
-  #hr {
-    width: 50%;
-    margin-top: 0.5em;
-  }
-
-  .col-md-6 {
-    background: linear-gradient(141deg, rgba(3, 27, 52, 1) 0%, rgba(0, 33, 100, 1) 100%);
-    border-radius: 6px;
-    filter: drop-shadow(0.5em 0.5em 0.5em black);
-    padding: 1em;
-    margin-top: 2.5em;
-
-    &:hover {
-      box-shadow: 0 0 0.75em white;
-    }
-
-    h2, p {
-      color: white;
-    }
-
-    .link-button {
-      color: #031b34;
-      text-shadow: 1px 1px 2px rgba(0 0 0 / 0.5);
-      background-color: white;
-      border: none;
-      border-radius: 10em;
-      padding: 0 0.5em;
-      cursor: pointer;
-
-      &:hover {
-        box-shadow: 0 0 0.25em white;
-      }
-    }
-  }
-
-  .col-md-6 {
-    form {
-      .btn {
-        margin-top: 2em;
-        box-shadow: 0.5em 0.5em 0.5em black !important;
-      }
-    }
-
-    .hr {
-      margin: 1.75em 0 1em 0;
-    }
-  }
-
-  input {
-    box-shadow: 0.5em 0.5em 0.5em black !important;
-  }
-}
-
-ul {
-  li {
-    color: white;
-  }
-}
-
-.buttons-container {
-  @include flexbox(flex, row, flex-start, center, nowrap);
-
-  form {
-    button {
-      color: white;
-      background: #031b34;
-      border: 1px solid white;
-      margin-right: 1em;
-
-      &:hover {
-        @include btnHover
-      }
-
-      &:active {
-        @include btnActive;
-      }
-    }
-  }
-}
-
-
-.form-group {
-  label {
-    margin-top: 1em;
-    margin-bottom: 0.25em;
-  }
-
-  .alert {
-    font-family: "Manrope", sans-serif;
-    color: white;
-    background: linear-gradient(270deg, rgba(223, 0, 115, 1) 0%, rgba(255, 0, 0, 1) 100%);
-    margin-top: 0.5em;
-  }
-}
-
-.container-ads {
-  width: 100vw;
-  //background: #031b34;
-  margin-top: 4em;
-
-  label {
-    background: #81afdd no-repeat center;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 2em;
-    font-weight: 900;
-  }
-
-  .btn-block {
-    background: #031b34;
-
-    &:hover {
-      @include btnHover;
-      border: 1px solid white;
-    }
-
-    &:active {
-      @include btnActive;
-    }
-  }
-}
-
-.container-all-ads {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-items: center;
-
-  .col-md-6 {
-    width: 95%;
-
-    h2,p {
-      text-align: start;
-    }
-  }
-}
-
-.btn-block {
-  filter: drop-shadow(0.5em 0.5em 0.5em black) !important;
-}
-
-@import "./media-queries";
+@import "./styling";
