--- a/src/main/webapp/scss/automation/_mixins.scss
+++ b/src/main/webapp/scss/automation/_mixins.scss
@@ -1,5 +1,5 @@
-@import "./variables";
-@import "./functions";
+@import "variables";
+@import "functions";
 
 @mixin flexbox($dis, $flex-d, $justify, $align, $wrap) {
   display: mapGetter($display, $dis);
